--- a/package.json
+++ b/package.json
@@ -1,42 +1,86 @@
 {
-  "name": "react-hook-form-starter",
-  "version": "0.1.0",
+  "name": "rnstarter",
+  "version": "0.0.1",
   "private": true,
-  "dependencies": {
-    "@hookform/resolvers": "^2.3.0",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "bootstrap": "^4.5.2",
-    "node-sass": "^4.14.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-hook-form": "^7.0.7",
-    "react-scripts": "3.4.3",
-    "yup": "^0.32.9"
-  },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "android": "react-native run-android",
+    "ios": "react-native run-ios",
+    "start": "react-native start",
+    "test": "jest",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "resetIos": "cd ios && pod deintegrate && rm -rf Podfile.lock && pod install && cd .. && yarn run ios",
+    "resetAndroid": "cd android && ./gradlew clean && cd .. && yarn run android",
+    "postinstall": "yarn rnuc .env && npx pod-install",
+    "build-apk": "cd android && ./gradlew clean && ./gradlew assembleRelease && cd .. && yarn run android",
+    "postuninstall": "yarn rnuc .env && npx pod-install"
   },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "dependencies": {
+    "@react-native-community/async-storage": "^1.12.1",
+    "@react-native-community/datetimepicker": "^3.5.0",
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-community/netinfo": "^6.0.0",
+    "@react-navigation/native": "^5.9.4",
+    "@react-navigation/stack": "^5.14.5",
+    "@stream-io/flat-list-mvcp": "^0.10.1",
+    "@types/moment": "^2.13.0",
+    "@types/react-native-indicators": "^0.16.0",
+    "@types/react-native-material-menu": "^1.0.4",
+    "@types/react-native-material-ripple": "^0.9.1",
+    "@types/react-native-vector-icons": "^6.4.6",
+    "@types/react-navigation": "^3.4.0",
+    "axios": "^0.21.1",
+    "moment": "^2.29.1",
+    "moti": "^0.11.0",
+    "react": "17.0.1",
+    "react-hook-form": "^7.5.2",
+    "react-native": "0.64.0",
+    "react-native-bidirectional-infinite-scroll": "^0.3.3",
+    "react-native-bootsplash": "^3.2.3",
+    "react-native-dropdownalert": "^4.3.0",
+    "react-native-elements": "^3.4.1",
+    "react-native-gesture-handler": "^1.10.3",
+    "react-native-indicators": "^0.17.0",
+    "react-native-internet-connection-alert": "^0.1.4",
+    "react-native-keyboard-aware-scroll-view": "^0.9.4",
+    "react-native-keyboard-spacer": "^0.4.1",
+    "react-native-material-menu": "^1.2.0",
+    "react-native-material-ripple": "^0.9.1",
+    "react-native-modal-datetime-picker": "^9.2.3",
+    "react-native-reanimated": "^2.1.0",
+    "react-native-safe-area-context": "^3.2.0",
+    "react-native-screens": "^3.2.0",
+    "react-native-snackbar": "^2.4.0",
+    "react-native-ultimate-config": "^3.3.4",
+    "react-native-vector-icons": "^8.1.0",
+    "react-query": "^3.16.0",
+    "recoil": "^0.2.0"
   },
   "devDependencies": {
-    "gh-pages": "^3.1.0"
+    "@babel/core": "^7.12.9",
+    "@babel/runtime": "^7.12.5",
+    "@react-native-community/eslint-config": "^2.0.0",
+    "@types/jest": "^26.0.20",
+    "@types/react-native": "^0.64.0",
+    "@types/react-test-renderer": "^16.9.2",
+    "babel-jest": "^26.6.3",
+    "eslint": "^7.14.0",
+    "jest": "^26.6.3",
+    "metro-react-native-babel-preset": "^0.64.0",
+    "react-test-renderer": "17.0.1",
+    "typescript": "^3.8.3"
+  },
+  "resolutions": {
+    "@types/react": "^17"
+  },
+  "jest": {
+    "preset": "react-native",
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "jsx",
+      "json",
+      "node"
+    ]
   }
 }
